force-app/main/default/objects/cpm__Mandate_History__c/cpm__Mandate_History__c.object-meta.xml
<CustomObject>
    <label>Mandate History</label>
    <nameField>
        <displayFormat>MH-{0}</displayFormat>
        <label>Mandate History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandate Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>