force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Change_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Change_Date__c</fullName>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>