force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Change_Processed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Change_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Processed</label>
    <type>Checkbox</type>
</CustomField>