force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Bank_Account__c</fullName>
    <label>Original Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>