force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Bank_Account_Additional__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Bank_Account_Additional__c</fullName>
    <label>Original Bank Account Additional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>