force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Creditor_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Creditor_Identifier__c</fullName>
    <label>Original Creditor Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>