force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Date_Signed__c</fullName>
    <label>Original Date Signed</label>
    <type>Date</type>
</CustomField>