force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Mandate_Reference__c</fullName>
    <label>Original Mandate Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>