force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Original_Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Mandate_Type__c</fullName>
    <label>Original Mandate Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>